--- a/students/templates/students/list.html
+++ b/students/templates/students/list.html
@@ -1,9 +1,8 @@
-<!DOCTYPE html>
 <html>
 	<head>
     {% load staticfiles %}
 		<link rel="stylesheet" type="text/css" href="{% static "/css/bootstrap.min.css" %}">
-		<title>Course main page</title>
+		<title>Students</title>
 	</head>
 	<body>
 		<nav class="navbar navbar-inverse navbar-fixed-top">
@@ -18,49 +17,44 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="index.html">Main</a></li>
-            <li><a href="contact.html">Contacts</a></li>
-            <li><a href="student_list.html">Students</a></li>
+            <li class="active"><a href={% url 'index' %}>Main</a></li>
+            <li><a href={% url 'students:students' %}>Students</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
     </nav>
-
-		<div class="container theme-showcase" role="main">
-			<div class="jumbotron">
-				<div class="container">
-					<h1>ITBursa</h1>	
-				</div>
-	      <h1>Description</h1>
-	      <p>In this course we shifted the emphasis towards the practice.
-It will be a moderate amount of theory - maximum of practice.
-Approximate ratio of theory and practice: 30% to 70%
-Courses will take place from October 19 to December 28.
-Practical lessons in the classroom + online lectures.</p>
-	     </div>
-	     <div class="page-header">
-        <h1>Program</h1>
-      </div>
 			<div class="col-md-6">
           <table class="table table-striped">
             <thead>
               <tr>
-                <th>Course</th>
-                <th>Description</th>
+                <th>#</th>
+                <th>Name Surname</th>
+                <th>Address</th>
+                <th>Skype</th>
+								<th>Courses</th>
               </tr>
             </thead>
             <tbody>
-              {% for course in courses_list %}
+              {% for student in student_list %}
                 <tr>
-                  <td><a href="/courses/{{ course.id }}/">{{ course.name }}</a></td>
-                  <td>{{course.short_description}}</td>
+                	<td>{{student.id}}</td>
+                  <td><a href={% url 'students:detail' student.id%}>{{ student.full_name }}</a></td>
+                  <td>{{student.address}}</td>
+									<td>{{student.skype}}</td>
+									<td> 
+										{% for course in student.courses.all %}
+											<a href={% url 'courses:detail' course.id%}>{{course.name}}</a> <br/>
+										{% endfor %}
+									 </td>
                 </tr>
               {% endfor %}
             </tbody>
           </table>
         </div>
       </div>
-		</div>
+
+		</table>
 
 	</body>
+
 </html>
