--- a/templates/index.html
+++ b/templates/index.html
@@ -1,36 +1,34 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="stylesheet" type="text/css" href="../static/css/bootstrap.min.css">
-	  <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-		<script type="text/javascript" src="../static/js/bootstrap.min.js"></script>
+    {% load staticfiles %}
+		<link rel="stylesheet" type="text/css" href="{% static "/css/bootstrap.min.css" %}">
 		<title>Course main page</title>
 	</head>
 	<body>
-		<nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
+  		<nav class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+          </div>
+          <div id="navbar" class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+              <li class="active"><a href={% url 'index' %}>Main</a></li>
+              <li><a href={% url 'students:students' %}>Students</a></li>
+            </ul>
+          </div><!--/.nav-collapse -->
         </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="index.html">Main</a></li>
-            <li><a href="contact.html">Contacts</a></li>
-            <li><a href="student_list.html">Students</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </nav>
+      </nav>
 
 		<div class="container theme-showcase" role="main">
 			<div class="jumbotron">
 				<div class="container">
-					<h1>PyBursa</h1>	
+					<h1>ITBursa</h1>	
 				</div>
 	      <h1>Description</h1>
 	      <p>In this course we shifted the emphasis towards the practice.
@@ -38,11 +36,6 @@ It will be a moderate amount of theory - maximum of practice.
 Approximate ratio of theory and practice: 30% to 70%
 Courses will take place from October 19 to December 28.
 Practical lessons in the classroom + online lectures.</p>
-				<p>
-					<button type="button" class="btn btn-primary" data-toggle="button" aria-pressed="false" autocomplete="off" id="learnbtn">
-  					Learn more
-					</button>
-				</p>	
 	     </div>
 	     <div class="page-header">
         <h1>Program</h1>
@@ -51,38 +44,22 @@ Practical lessons in the classroom + online lectures.</p>
           <table class="table table-striped">
             <thead>
               <tr>
-                <th>#</th>
-                <th>Lesson</th>
-                <th>Content</th>
+                <th>Course</th>
+                <th>Description</th>
               </tr>
             </thead>
             <tbody>
-              <tr>
-                <td>1</td>
-                <td>Python basics</td>
-                <td>Decorators, OOP, pipelines, multithreading, workers, iterative decorating workers</td>
-              </tr>
-              <tr>
-                <td>2</td>
-                <td>Quantum physics</td>
-                <td>Corpuscular theory of light, subatomic particles, quantum equation derivatives</td>
-              </tr>
-              <tr>
-                <td>3</td>
-                <td>Fortune, horoscopes and your life</td>
-                <td>Spiritual advices, numerology, feng shui, psychic insights</td>
-              </tr>
+              {% for course in courses_list %}
+                <tr>
+                  <td><a href="/courses/{{ course.id }}/">{{ course.name }}</a></td>
+                  <td>{{course.short_description}}</td>
+                </tr>
+              {% endfor %}
             </tbody>
           </table>
         </div>
       </div>
 		</div>
-    <script>
-    	$('#learnbtn').on('click', function () {
-    		$(this).button('complete') 
-    		window.alert("Page is under construction");
-  		})
-    </script>
 
 	</body>
 </html>
