--- a/templates/coaches/detail.html
+++ b/templates/coaches/detail.html
@@ -48,36 +48,39 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <h2>{{ coach.user.first_name }} {{ coach.user.last_name }}</h2>
+                <h2>{{ coaches.user.first_name }} {{ coaches.user.last_name }}</h2>
                 <img src="{% static 'images/face.jpg' %}" alt="img">
                 <table class="table table-striped table-hover">
                     <tbody>
                         <tr>
                             <td>Дата рождения</td>
-                            <td>{{ coach.date_of_birth }}</td>
+                            <td>{{ coaches.date_of_birth }}</td>
                         </tr>
                         <tr>
                             <td>адрес</td>
-                            <td>{{ coach.address }}</td>
+                            <td>{{ coaches.address }}</td>
                         </tr>
                         <tr>
                             <td>почта</td>
-                            <td>{{ coach.user.email }}</td>
+                            <td>{{ coaches.user.email }}</td>
                         </tr>
                         <tr>
                             <td>логин skype</td>
-                            <td>{{ coach.skype }}</td>
+                            <td>{{ coaches.skype }}</td>
                         </tr>
                         <tr>
                             <td>телефон</td>
-                            <td>{{ coach.phone }}</td>
+                            <td>{{ coaches.phone }}</td>
                         </tr>
                         <tr>
                             <td>курсы учитель</td>
-                            <td></td>
+                            <td>{% for coach_course in coach_courses %}<a href='{% url "courses:detail" coach_course.id %}'>{{ coach_course.name }}</a> студенты курса  <a href='{% url "students:list_view" %}?course_id={{ coach_course.id }}'><span class="glyphicon glyphicon-flash"></span></a>{% endfor %}</td>
                         </tr>
                         <tr>
                             <td>курсы ассистент</td>
+                             <td>{% for assistant in assistants %}
+                    <a href="{% url 'courses:detail' assistant.id %}">{{ assistant.name }}</a>студенты курса
+                    <a href="{% url 'students:list_view' %}?course_id={{ assistant.id }}"><span class="glyphicons glyphicons-rugby"></span></a> {% endfor %}</td>
                         </tr>
                         
                     </tbody>
