--- a/templates/students/detail.html
+++ b/templates/students/detail.html
@@ -25,9 +25,9 @@
           <div class="container">
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li><a href="{% url 'index' %}">Main</a></li>
+                <li class="active"><a href="{% url 'index' %}">Main</a></li>
                 <li><a href="{% url 'contact' %}">Contacts</a></li>
-                <li class="active"><a href="{% url 'students:list_view' %}">Students</a><li>
+                <li><a href="{% url 'student_list' %}">Students</a></li>
               </ul>
             </div>
           </div>
@@ -36,41 +36,43 @@
     </div>
 <div>
 <div class="container">
-      <h1>Student details</h1>
-            <h2>{{ student.name }} {{ student.surname }}</h2>
-              <br>
-              <table class="table table-bordered">
-                <tr>
-                  <td>Birth day</td>
-                  <td>{{ student.date_of_birth }}</td>
-                </tr>
-                <tr>
-                  <td>Address</td>
-                  <td>{{ student.address }}</td>
-                </tr>
-                <tr>
-                  <td>Email</td>
-                  <td>{{ student.email }}</td>
-                </tr>
-                <tr>
-                  <td>Skype</td>
-                  <td>{{ student.skype }}</td>
-                </tr>
-                <tr>
-                  <td>Phone</td>
-                  <td>{{ student.phone }}</td>
-                </tr>
-                <tr>
-                  <td>Courses</td>
-                  <td>{% for course in student.courses.all %}
-                          <a class="out-link" href="{% url 'courses:detail' course.id %}"> {{ course }}</a>
-                      {% endfor %}</td>
-                  </tr>
-                </tr>
-              </table>
-              </br>
-      </div>
-    </div>
+<table class="table table-bordered">
+    <thead>
+      <tr>
+        <th colspan="2">Информация о студенте</th>
+      </tr>
+    </thead>
+    <tbody></br></br></br></br></br></br>
+      <tr>
+        <td>Birth Date</td>
+        <td>{{student.birthday}}</td>
+      </tr>
+      <tr>
+        <td>Address</td>
+        <td>{{student.address}}</td>
+      </tr>
+      <tr>
+        <td>E-mail</td>
+        <td>{{student.email}}</td>
+      </tr>
+      <tr>
+        <td>Skype</td>
+        <td>{{student.skype}}</td>
+      </tr>
+      <tr>
+        <td>Phone</td>
+        <td>{{student.phone}}</td>
+      </tr>
+      <td>Courses</td>
+        <td>
+           {%for course in student.courses.all%}
+              <a href="{% url 'courses:detail' course.id %}"> {{ course }}</a>
+           {%endfor%}
+        </td>
+    </tbody>
+  </table>
+</div>
+</div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
   </body>
