--- a/courses/templates/courses/detail.html
+++ b/courses/templates/courses/detail.html
@@ -33,7 +33,7 @@
           <ul class="nav navbar-nav">
             <li><a href="{% url 'index' %}">Main</a></li>
             <li><a href="{% url 'contact' %}">Contacts</a></li>
-            <li><a href="{% url 'student:list_view' %}">Students</a></li>
+            <li><a href="{% url 'student:list_view' %}?course_id={{ course.id }}">Students</a></li>
           </ul>
         </div>
       </div>
@@ -58,7 +58,7 @@
           <tbody>
           {% for lesson in course.lesson_set.all %}
             <tr>
-              <th scope="row">{{ lesson.order }}</th>
+              <td>{{ lesson.order }}</td>
               <td>{{ lesson.subject }}</td>
               <td>{{ lesson.description }}</td>
             </tr>
