--- a/students/templates/students/detail.html
+++ b/students/templates/students/detail.html
@@ -34,7 +34,7 @@
           <ul class="nav navbar-nav">
             <li><a href="{% url 'index' %}">Main</a></li>
             <li><a href="{% url 'contact' %}">Contacts</a></li>
-            <li><a href="{% url 'student_list' %}">Students</a></li>
+            <li><a href="{% url 'students:list_view' %}">Students</a></li>
           </ul>
         </div>
       </div>
@@ -56,7 +56,7 @@
                 <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
                   <div class="panel-body">
                     <table class="table table-bordered">
-                          <th scope="row">аата рождения</th>
+                          <th scope="row">дата рождения</th>
                           <td>{{ student.date_of_birth }}</td>
                         </tr>
                         <tr>
