--- a/templates/index.html
+++ b/templates/index.html
@@ -1,93 +1,230 @@
 {% load staticfiles %}
 
-<!DOCTYPE html>
-<html lang="en">
-
+<!doctype html>
+<html lang="ru">
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Main Page</title>
-    <!-- Bootstrap -->
-    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-    <link href="{% static 'css/style.css' %}" rel="stylesheet">
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-	      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-	      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-	    <![endif]-->
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
+
+    <title></title>
+    <meta name="description" content=""/>
+
+    {#    <link rel="stylesheet" href="http://www.android-kiosk.com/wp-content/themes/androidkioskcom/style.css"#}
+    {#          type="text/css" media="screen,projection"/>#}
+    <link rel="stylesheet" href="{% static 'css/materialize.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/orbita.css' %}">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"/>
+
+    <!-- Favicons -->
+    <link rel="apple-touch-icon" sizes="57x57" href="{% static 'img/favicons/apple-icon-57x57.png' %}">
+    <link rel="apple-touch-icon" sizes="60x60" href="{% static 'img/favicons/apple-icon-60x60.png' %}">
+    <link rel="apple-touch-icon" sizes="72x72" href="{% static 'img/favicons/apple-icon-72x72.png' %}">
+    <link rel="apple-touch-icon" sizes="76x76" href="{% static 'img/favicons/apple-icon-76x76.png' %}">
+    <link rel="apple-touch-icon" sizes="114x114" href="{% static 'img/favicons/apple-icon-114x114.png' %}">
+    <link rel="apple-touch-icon" sizes="120x120" href="{% static 'img/favicons/apple-icon-120x120.png' %}">
+    <link rel="apple-touch-icon" sizes="144x144" href="{% static 'img/favicons/apple-icon-144x144.png' %}">
+    <link rel="apple-touch-icon" sizes="152x152" href="{% static 'img/favicons/apple-icon-152x152.png' %}">
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'img/favicons/apple-icon-180x180.png' %}">
+    <link rel="icon" type="image/png" sizes="192x192" href="{% static 'img/favicons/android-icon-192x192.png' %}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'img/favicons/favicon-32x32.png' %}">
+    <link rel="icon" type="image/png" sizes="96x96" href="{% static 'img/favicons/favicon-96x96.png' %}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'img/favicons/favicon-16x16.png' %}">
+    <link rel="manifest" href="{% static 'img/favicons/manifest.json' %}">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="{% static 'img/favicons/ms-icon-144x144.png' %}">
+    <meta name="theme-color" content="#ffffff">
+
+    <!-- Android 5 Chrome Color -->
+    <meta name="theme-color" content="#7cb342">
+
 </head>
-
 <body>
-<nav class="navbar navbar-default">
-    <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
-                    data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
+<div class="navbar-fixed">
+    <nav role="navigation">
+        <div class="container">
+            <div class="nav-wrapper">
+                <a id="logo-container" href="{% url 'index' %}" class="brand-logo waves-effect waves-light">
+                    <div class="hide-on-med-and-down">
+                        <img src="{% static 'img/logo_itbursa.png' %}"
+                             width="30" id="appicon">
+                        <span style="font-size: 22px;font-weight:300;">ITBursa</span>
+                    </div>
+                    <div class="hide-on-large-only">
+                        <span style="font-size: 22px;font-weight:300;">ITBursa</span>
+                    </div>
+                </a>
 
-            <a class="navbar-brand" href="{% url 'index' %}"></a>
-        </div>
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav">
-                {# <li class="active"><a href="{% url 'index' %}">Main</a></li> #}
-                <li class="active"><a href="{% url 'index' %}">Main</a></li>
-                <li><a href="{% url 'contact' %}">Contacts</a></li>
-                <li><a href="{% url 'students:list_view' %}">Students</a></li>
-                {#                <li><a href="{% url 'results' %}">Equation</a></li>#}
-            </ul>
-        </div>
-        <!-- /.navbar-collapse -->
-        </div>
-    <!-- /.container-fluid -->
-</nav>
-<div class="container">
-    <div class="row">
-        <div class="col-lg-12">
-            <div class="well">
-                <h1>Bursa</h1>
+                <ul id="slide-out" class="side-nav">
+                    <li>
+                        <a href="{% url 'index' %}">Главная</a>
+                    </li>
+                    <li>
+                        <a href="{% url 'contact' %}">Контакты</a>
+                    </li>
+                    {% block change_link_mobi %}
+                        <li>
+                            <a href="{% url 'students:list_view' %}">Студенты</a>
+                        </li>
+                    {% endblock %}
+                </ul>
+                <ul class="right hide-on-med-and-down">
+                    <li>
+                        <a href="{% url 'index' %}">Главная</a>
+                    </li>
+                    <li>
+                        <a href="{% url 'contact' %}">Контакты</a>
+                    </li>
+                    {% block change_link %}
+                        <li>
+                            <a href="{% url 'students:list_view' %}">Студенты</a>
+                        </li>
+                    {% endblock %}
+                </ul>
 
-                <p>Данное направление позволяет освоить одну из самых популярных специальностей в IT-индустрии –
-                    программист. Немаловажным фактором является то, что слушателям предоставляется возможность
-                    ознакомиться с разными направлениями в программировании и выбрать для себя наиболее подходящий
-                    вариант. В программу курса включаются все аспекты программирования – начиная от основ алгоритмизации
-                    и заканчивая новейшими инструментариями используемыми в современной индустрии. Также в курс
-                    включаются предметы выходящие за рамки программирования, где слушатели знакомятся с основами
-                    проектирования, построением сложных систем и управлением программными проектами.</p>
+                <a href="#" data-activates="slide-out" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
             </div>
+        </div>
+    </nav>
+</div>
 
-            <h2>Program</h2>
-            <table class="table table-striped table-hover">
-                <thead>
-                <tr>
-                    <th>Курс</th>
-                    <th>Описание</th>
-                </tr>
-                </thead>
-                <tbody>
-                {% for course in courses %}
-                    <tr>
-                        <td><a href="{% url 'courses:detail' course.id %}">{{ course.name }}</a></td>
-                        <td>{{ course.short_description }}</td>
-                    </tr>
-                {% endfor %}
-                </tbody>
-            </table>
+<!-- start center banner -->
+
+<div id="index-banner">
+    <div class="section">
+        {% block banner %}
+            <div class="container">
+                <div class="row">
+                    <div class="col s12">
+                        <div class="card" style="background-color: rgba(255, 255,255, 0.90);">
+                            <div class="card-content">
+                                <div class="col l2 m3 s4">
+                                    <img src="{% static 'img/logo_itbursa.png' %}" class="responsive-img">
+                                </div>
+                                <div class="hide-on-med-and-up col s8">
+                                    <h1 style="font-size:1.2rem;font-weight:400;">Learn with ItBursa</h1>
+
+                                </div>
+                                <div class="col l10 m9 s12">
+                                    <div class="hide-on-small-and-down">
+                                        <h1 style="font-size:1.64rem;font-weight:400;">Learn with ItBursa</h1>
+
+                                    </div>
+                                    <div class="divider" style="clear:both;"></div>
+                                </div>
+                                <div class="s12" style="clear:both;">
+                                    <p class="center-align" style="color: rgba(0, 0, 0, 0.71); margin: 15px;">Курсы
+                                        ItBursa
+                                        начали работу в 2014 году. Мы специализируемся на «модных» языках
+                                        программирования.
+                                        Принципиальное наше отличие от других курсов – максимум практики и жесткая
+                                        система
+                                        обязательных домашних заданий. Преподаватели – опытные практикующие
+                                        разработчики,
+                                        они помогают участникам в ходе курсов создать реальные проекты и получить
+                                        практические навыки, применимые к работе. Домашние задания на наших курсах
+                                        обязательны и их невыполнение приводит к исключению с курсов. Таким образом, мы
+                                        готовим не просто «слушателей» курсов, а настоящих специалистов, способных
+                                        создавать
+                                        пусть простые, но рабочие проекты.</p>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+            </div>
+            </div>
+        {% endblock %}
+    </div>
+</div>
+<!--/ end center banner -->
+
+<!-- start section -->
+
+<div class="section no-pad-top no-pad-bot">
+    <div class="container">
+        <div class="row">
+            {% block list_courses %}{% endblock %}
         </div>
     </div>
 </div>
-<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="{% static 'js/bootstrap.min.js' %}"></script>
-</body>
 
+<!--/ end section -->
+
+<!-- start footer -->
+
+<footer style="margin-top:0px;" id="contact">
+    <div class="container">
+        <div class="row">
+            <div class="col l6 s12">
+                <h5 class="white-text">Задайте вопрос</h5>
+
+                <form class="col s12" action="" method="post" id="contactForm">
+                    <div class="row">
+                        <div class="input-field col s6">
+                            <i class="mdi-account-circle prefix white-text"></i>
+                            <input id="name" name="name" type="text" class="validate white-text">
+                            <label for="name" class="white-text">Имя</label>
+                        </div>
+                        <div class="input-field col s6">
+                            <i class="mdi-email prefix white-text"></i>
+                            <input id="email" name="email" type="email" class="validate white-text">
+                            <label for="email" class="white-text">Email</label>
+                        </div>
+                        <div class="input-field col s12">
+                            <i class="mdi-pencil prefix white-text"></i>
+                            <textarea id="message" name="message" class="materialize-textarea white-text"
+                                      style="padding-bottom: 0px;"></textarea>
+                            <label for="message" class="white-text">Сообщение</label>
+                        </div>
+                        <div class="input-field col s12 offset-m6 m6 l12">
+
+                            <i class="mdi-pencil prefix white-text"></i>
+                            <input type="text" name="captcha" id="captcha" maxlength="6" size="6"
+                                   class="validate white-text">
+                            <label for="captcha" class="white-text">Символы с картинки</label>
+                        </div>
+                        <div class="col offset-s7 s5">
+                            <button class="btn waves-effect waves-light white light-green-text text-darken-2 right"
+                                    type="submit">Отправить
+                                <i class="mdi-send right text-darken-2"></i>
+                            </button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <div class="col offset-l2 l6 s12" style="text-align: right;">
+                <h5 class="white-text">Контакты</h5>
+                <ul>
+                    <li><span class="white-text">IT Bursa<br>Украина, г.Харьков</span>
+                    </li>
+                    <li><a href="mailto:itbursa100@gmail.com" class="white-text"
+                           style="">itbursa100@gmail.com </a></li>
+                    <li><span class="white-text" style="">Tel: +38(077)1234578</span></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="footer-copyright">
+        <div class="container">
+            <span class="white-text">© 2015 <a href="http://itbursa.com/" class="white-text">IT Bursa</a></span>
+        </div>
+    </div>
+</footer>
+
+<!--/ end footer -->
+
+<!-- start scripts -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+<script src="{% static 'js/materialize.min.js' %}"></script>
+<script>
+    $('.button-collapse').sideNav({
+                menuWidth: 300, // Default is 240
+                edge: 'left', // Choose the horizontal origin
+                closeOnClick: true // Closes side-nav on <a> clicks, useful for Angular/Meteor
+            }
+    );
+</script>
+<!--/ end scripts -->
+</body>
 </html>
