--- a/templates/contact.html
+++ b/templates/contact.html
@@ -22,17 +22,18 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">PyBursa</a>
+          <a class="navbar-brand" href="#">ITBursa</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li><a href="{% url 'index' %}">Main</a></li>
-            <li class="active"><a href="{% url 'contact' %}">Contacts</a></li>
-            <li><a href="{% url 'student_list' %}">Students</a></li>
+            <li><a href="{% url 'index' %}">Главная</a></li>
+            <li class="active"><a href="{% url 'contact' %}">Контакты</a></li>
+            <li><a href="{% url 'students:list_view' %}">Студенты</a></li>
           </ul>
         </div>
       </div>
     </nav>
+    <hr>
     <div class="row">
       <div class="col-sm-6 col-md-4">
         <div class="thumbnail">
@@ -81,7 +82,7 @@
       <hr>
 
       <footer class="footer">
-        <p>&copy; PyBursa 2015</p>
+        <p>&copy; ITBursa 2015</p>
       </footer>
     </div> 
 
