--- a/templates/index.html
+++ b/templates/index.html
@@ -22,13 +22,13 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>  
           </button>
-          <a class="navbar-brand" href="#">PyBursa</a>
+          <a class="navbar-brand" href="#">ITBursa</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="{% url 'index' %}">Main</a></li>
-            <li><a href="{% url 'contact' %}">Contacts</a></li>
-            <li><a href="{% url 'student_list' %}">Students</a></li>
+            <li class="active"><a href="{% url 'index' %}">Главная</a></li>
+            <li><a href="{% url 'contact' %}">Контакты</a></li>
+            <li><a href="{% url 'students:list_view' %}">Студенты</a></li>
           </ul>
         </div>
       </div>
@@ -36,28 +36,36 @@
   	<div class="container theme-showcase">
       <div class="jumbotron">
         <div>
-          <h1 class="descr">Welcome to PyBursa</h1>
-          <h1 class="descr">Description</h1>
-        </div>
-        <p class="about">This course is designed to help students with very little or no computing background learn the basics of building simple interactive applications. Our language of choice, Python, is an easy-to learn, high-level computer language that is used in many of the computational courses offered on Coursera. To make learning Python easy, we have developed a new browser-based programming environment that makes developing interactive applications in Python simple. These applications will involve windows whose contents are graphical and respond to buttons, the keyboard and the mouse.
-        </p>
-      </div>
-    </div>
-    <div class="container">
-      <div class="row">
-        <div class="program">
-          <h2>Program</h2>
-          <p>The primary method for learning the course material will be to work through multiple "mini-projects" in Python. To make this class enjoyable, these projects will include building fun games such as Pong, Blackjack, and Asteroids. When you’ve finished our course, we can’t promise that you will be a professional programmer, but we think that you will learn a lot about programming in Python and have fun while you’re doing it. </p>
-          <p>The first part of the course will last five weeks.  The lectures from each week will focus on the topics listed in the syllabus while an associated weekly “mini- project” will serve to reinforce these concepts in practice.  Grades for these mini-projects will be determined via peer-assessment.  The class will also include two quizzes each week to provide further feedback.
+          <h2 class="descr">Добро пожаловать в ITBursa</h2>
+          <p class="about">Мы специализируемся на модных языках программирования. Принципиальное наше отличие от других курсов - максимум практики и жесткая система обязательных домашних заданий.
           </p>
-          
+          <h3 class="descr">Выбирай на каком курсе ты хочешь учится!</h3>
+          <div class="bs-example" data-example-id="simple-table">
+          <table class="table table-striped table table-bordered">
+            <caption>Список курсов</caption>
+            <thead>
+              <tr>
+                <th>Курс</th>
+                <th>Описание</th>
+              </tr>
+            </thead>
+            <tbody>
+              {% for course in courses %}
+              <tr>
+                <th scope="row"><a class="table" href="{% url 'courses:detail' course.id %}">{{ course }}</a></th>
+                <td>{{ course.short_description }}</td>
+              </tr>
+              {% endfor %}
+            </tbody>
+          </table>
+        </div>
         </div>
       </div>
 
-      <hr>
+          <hr>
 
       <footer class="footer">
-        <p>&copy; PyBursa 2015</p>
+        <p>&copy; ITBursa 2015</p>
       </footer>
     </div>
 
