--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -22,13 +22,13 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>  
           </button>
-          <a class="navbar-brand" href="#">PyBursa</a>
+          <a class="navbar-brand" href="#">ITBursa</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li><a href="{% url 'index' %}">Main</a></li>
-            <li><a href="{% url 'contact' %}">Contacts</a></li>
-            <li class="active"><a href="{% url 'student_list' %}">Students</a></li>
+            <li><a href="{% url 'index' %}">Главная</a></li>
+            <li><a href="{% url 'contact' %}">Контакты</a></li>
+            <li class="active"><a href="{% url 'student_list' %}">Студенты</a></li>
           </ul>
         </div>
       </div>
