--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -8,7 +8,7 @@
     <title>Site about students of PyBursa courses</title>
 
     <!-- Bootstrap -->
-    <link href="../static/css/bootstrap.css" rel="stylesheet">
+    <link href='/static/css/bootstrap.css' rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -34,9 +34,10 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">        
-        <li><a href="index.html">Main</a></li>
-		<li><a href="contact.html">Contact</a></li>
-		<li class="active"><a href="student_list.html">Student<span class="sr-only">(current)</span></a></li>
+        <li><a href="/index/">Main</a></li>
+		<li><a href="/contact/">Contact</a></li>
+		<li class="active"><a href="/student_list/">Student<span class="sr-only">(current)</span></a></li>
+		<li><a href="/quadratic/results/">Quadratic</a></li>
       </ul>   
       
     </div><!-- /.navbar-collapse -->
@@ -55,7 +56,7 @@
  </thead>
  <tbody>
 	<tr>
-		<td><a href="student_detail.html">1</a></td>
+		<td><a href="/student_detail/">1</a></td>
 		<td>Popov</td>
 		<td>Ivan</td>
 		<td>Ukraine, Knarkov, street 1</td>
