--- a/templates/coaches/detail.html
+++ b/templates/coaches/detail.html
@@ -52,11 +52,15 @@
               </tr>
               <tr>
                 <td>почта</td>
-                <td>{{my_coach.email}}</td>
+                <td>{{my_coach.user.email}}</td>
               </tr>
               <tr>
                 <td>логин skype</td>
                 <td>{{my_coach.skype}}</td>
+              </tr>
+              <tr>
+                <td>телефон</td>
+                <td>{{my_coach.phone}}</td>
               </tr>
               <tr>
                 <td>курсы учитель</td>
